# projeto_mgi

./: .env  .gitignore  LEIAME.md  README.md  news.md  prices.md  pyproject.toml
cache/: ceitec_crawled_urls.txt  imbel_crawled_urls.txt
prompts/CEITEC/dados_raspagem/: mapa_site.md
prompts/IMBEL/dados_raspagem/: mapa_site.md
prompts/TELEBRAS/dados_raspagem/: mapa_site.md
raspagem/scripts/: main.py
scripts/: CEITEC.py  IMBEL.py  TELEBRAS.py  crawler_empresas.py
